--- a/index.html
+++ b/index.html
@@ -7,35 +7,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
+    <div class="container">        <header>
             <h1>🎯 Morse Code Typing App</h1>
-            <p>Type using keyboard or click buttons to create Morse code!</p>
+            <p>Use Arrow Keys: ⬅️ Left = DOT (•) | ➡️ Right = DASH (—)</p>
         </header>
 
         <main>
             <!-- Input Section -->
             <section class="input-section">
-                <h2>Morse Input</h2>
-                <div class="morse-keyboard">
-                    <button class="morse-btn dot-btn" data-morse="." title="Dot (Press period key)">
+                <h2>Morse Input</h2>                <div class="morse-keyboard">
+                    <button class="morse-btn dot-btn" data-morse="." title="Dot - Left Arrow Key">
                         <span class="morse-symbol">•</span>
-                        <span class="key-hint">.</span>
+                        <span class="key-hint">⬅️ Left</span>
                     </button>
-                    <button class="morse-btn dash-btn" data-morse="-" title="Dash (Press minus key)">
+                    <button class="morse-btn dash-btn" data-morse="-" title="Dash - Right Arrow Key">
                         <span class="morse-symbol">—</span>
-                        <span class="key-hint">-</span>
+                        <span class="key-hint">➡️ Right</span>
                     </button>
-                    <button class="morse-btn space-btn" data-morse=" " title="Letter Space (Press Space)">
-                        <span class="morse-symbol">Space</span>
+                    <button class="morse-btn space-btn" data-morse=" " title="Letter Separator - Spacebar">
+                        <span class="morse-symbol">Letter</span>
                         <span class="key-hint">Space</span>
                     </button>
-                    <button class="morse-btn word-btn" data-morse="/" title="Word Space (Press Enter)">
+                    <button class="morse-btn word-btn" data-morse="/" title="Word Separator - Enter Key">
                         <span class="morse-symbol">Word</span>
                         <span class="key-hint">Enter</span>
                     </button>
-                </div>
-                <div class="sound-toggle">
+                </div>                <div class="sound-toggle">
                     <label>
                         <input type="checkbox" id="soundToggle" checked>
                         <span>Sound Effects</span>
@@ -79,10 +76,8 @@
                     </div>
                 </details>
             </section>
-        </main>
-
-        <footer>
-            <p>Use keyboard shortcuts: <strong>.</strong> (dot), <strong>-</strong> (dash), <strong>Space</strong> (letter separator), <strong>Enter</strong> (word separator)</p>
+        </main>        <footer>
+            <p>🎹 <strong>Arrow Keys:</strong> ⬅️ Left = DOT (•) | ➡️ Right = DASH (—) | <strong>Space</strong> = Letter separator | <strong>Enter</strong> = Word separator | Auto letter separation after 0.5s pause</p>
         </footer>
     </div>
 
