--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                         <span>Sound Effects</span>
                     </label>
                 </div>
+                
+                <!-- Letter separation timing control -->
+                <div class="timing-control">
+                    <label for="separationDelay">
+                        <span>Auto Letter Separation (seconds):</span>
+                        <input type="number" id="separationDelay" min="0.1" max="5" step="0.1" value="0.5">
+                    </label>
+                </div>
             </section>
 
             <!-- Display Section -->
